--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,15 @@
 
 html, body {
     height: 100%;
+    color: #4d4d4d;
 }
 body, input {
     font-family: 'Nunito', sans-serif;
+}
+::placeholder {
+    color: #9d9d9d !important;
+    font-style: italic;
+    opacity: 1; /* Firefox */
 }
 a {
     color: #F26327;
@@ -12,6 +18,12 @@ a {
 a:hover {
     text-decoration: none;
     color: #F26327;
+}
+.form-group {
+    margin-bottom: 0.8rem !important;
+}
+label {
+    margin-bottom: 0.4rem !important;
 }
 .no-padding {
     padding: 0 !important;
@@ -29,19 +41,121 @@ a:hover {
     border-color: #F26327 !important;
     padding: 10px 36px;
 }
-[class*="col-"] {
-    float: left;
+.btn-secondary {
+    color: #F26327;
+    background-color: #fff !important;
+    border-color: #F26327 !important;
+    padding: 10px 36px;
 }
+.btn-secondary:hover {
+    color: #F26327;
+}
+label.btn-radio {
+    border-radius: 24px !important;
+}
+.btn-radio {
+    color: #9d9d9d;
+    background-color: #fff !important;
+    border-color: #d5d5d5 !important;
+    padding: 4px 36px 4px 40px;
+}
+.btn-radio.active {
+    color: #009444;
+    border-color: #009444 !important;
+}
+.checkmark2 {
+    position: absolute;
+    top: 7px;
+    left: 12px;
+    height: 18px;
+    width: 18px;
+    border: 1px solid #9d9d9d;
+    border-radius: 10px;
+}
+.btn-radio.active .checkmark2 {
+    border-color: #009444;
+}
+.checkmark2:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+.btn-radio.active .checkmark2::after {
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    height: 12px;
+    width: 12px;
+    background-color: #009444;
+    border-radius: 10px;
+    display: block;
+}
+/* [class*="col-"] {
+    float: left;
+} */
 .form-group {
     position: relative;
 }
 .radio input[type="radio"], .radio-inline input[type="radio"], .checkbox input[type="checkbox"], .checkbox-inline input[type="checkbox"] {
     margin-right: 9px;
 }
+.logo-in {
+    max-width: 100%;
+}
 .checkbox input {
-    width: 21px;
-    height: 21px;
+    width: 18px;
+    height: 18px;
     vertical-align: sub;
+}
+.checkwrap {
+    position: relative;
+    padding-left: 24px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.checkwrap:hover input ~ .checkmark {
+    background-color: #eee;
+}
+.checkwrap input:checked ~ .checkmark{
+    background-color: #009444 !important;
+    border: 1px solid #009444;
+}
+.checkmark {
+    position: absolute;
+    top: 2px;
+    left: 0;
+    height: 18px;
+    width: 18px;
+    border: 1px solid #ddd;
+}
+.checkwrap input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+.checkwrap input:checked ~ .checkmark:after {
+    display: block;
+}
+.checkwrap .checkmark:after {
+    left: 5px;
+    top: 1px;
+    width: 6px;
+    height: 11px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 .forgot-pass-text {
     color: #F26327;
@@ -49,11 +163,6 @@ a:hover {
 }
 .forgot-pass-text:hover {
     color: #F26327;
-}
-.center-container {
-    display: flex;
-    align-items: center;
-    height: 100%;
 }
 .pad-lr-80 {
     padding-left: 80px;
@@ -68,6 +177,9 @@ a:hover {
 .pad-l-40 {
     padding-left: 40px;
 }
+.pad-b-20 {
+    padding-bottom: 20px;
+}
 .pad-b-40 {
     padding-bottom: 40px;
 }
@@ -80,3 +192,22 @@ a:hover {
 .fa {
     color: #4D4D4D;
 }
+.bg-green {
+    background-color: #009444;
+    color: #fff;
+}
+.title {
+    font-weight: 400;
+}
+.scroll-form {
+    max-height: 520px;
+    overflow-y: auto;
+}
+.scroll-form::-webkit-scrollbar {
+    width: 6px !important;
+    background-color: #eee;
+    opacity: 0.1;
+}
+.scroll-form::-webkit-scrollbar-thumb {
+    background: #009444;
+    border-radius: 10px;
