--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,46 @@ a:hover {
     text-decoration: none;
     color: #F26327;
 }
+nav.navbar {
+    padding-left: 40px;
+    padding-right: 40px;
+}
+a.navbar-brand {
+    line-height: 50px;
+}
+.navbar-brand img {
+    height: 50px;
+}
+.navbar-light {
+    background-color: #fff !important;
+    box-shadow: 0 2px 10px 0 rgba(58,59,69,.15)!important;
+}
+.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
+    color: #009444;
+}
+.dropdown-item.active, .dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: inherit;
+}
+.navbar-collapse, .navbar-nav {
+    align-items: center;
+}
+.navbar-nav li a:hover {
+    color: #009444 !important;
+}
+.badge {
+    position: absolute;
+    padding: 4px;
+    border-radius: 10px;
+    border: 2px solid #009444;
+    right: 10px;
+    height: 12px;
+    width: 12px;
+}
+.notif .fa {
+    font-size: 20px;
+}
 .form-group {
     margin-bottom: 0.8rem !important;
 }
@@ -30,6 +70,9 @@ label {
 }
 .no-margin {
     margin: 0 !important;
+}
+.fa.green {
+    color: #009444;
 }
 .btn {
     font-size: 16px !important;
@@ -196,6 +239,9 @@ label.btn-radio {
     background-color: #009444;
     color: #fff;
 }
+.font-weight-medium {
+    font-weight: 600;
+}
 .title {
     font-weight: 400;
 }
@@ -211,3 +257,7 @@ label.btn-radio {
 .scroll-form::-webkit-scrollbar-thumb {
     background: #009444;
     border-radius: 10px;
+}
+#userDropdown {
+    font-size: 14px;
+}
