--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ label {
     padding: 10px 36px;
 }
 .btn-secondary {
-    color: #F26327;
+    color: #F26327 !important;
     background-color: #fff !important;
     border-color: #F26327 !important;
     padding: 10px 36px;
@@ -307,10 +307,43 @@ label.btn-radio {
 .bg-white {
     background-color: #fff !important;
 }
+.bg-green {
+    color: #fff !important;
+    background-color: #009444 !important;
+}
+.table-green thead {
+    color: #fff !important;
+    background-color: #44BA7B !important;
+}
 .breadcrumb {
     padding-left: 60px !important;
     padding-right: 60px !important;
 }
+.card-header, .card-body {
+    padding: 24px 30px !important;
+}
 .content-wrapper {
     background: rgba(207, 216, 220, 0.3) !important;
+}
+.content-wrapper>.content {
+    padding: 24px 40px 40px !important;
+}
+.font-title {
+    padding: 0 !important;
+    margin-bottom: 30px !important;
+}
+.custom-select {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.dataTables_scroll {
+    margin-bottom: 20px !important;
+}
+.dataTables_scrollFoot div table.table-green, .dataTables_scrollFoot div table.table-green tfoot td {
+    border: none !important;
+    font-weight: 700;
+}
+.page-item.active .page-link {
+    background-color: rgb(0, 148, 68) !important;
+    border-color: rgb(0, 148, 68) !important;
 }
