--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ label {
 .btn {
     font-size: 16px !important;
     border-radius: 5px !important;
+    min-width: 98px;
 }
 .btn-primary {
     color: #fff !important;
@@ -130,8 +131,8 @@ label {
 .btn-secondary-gradient {
     background: linear-gradient(135deg, #FD763D 0%, #E35317 100%) !important;
     color:#fff !important;
-    border:none !important;
-    padding: 11px 37px;
+    border-color: linear-gradient(135deg, #FD763D 0%, #E35317 100%) !important;
+    padding: 10px 36px;
 }
 label.btn-radio {
     border-radius: 24px !important;
@@ -140,7 +141,7 @@ label.btn-radio {
     color: #9d9d9d;
     background-color: #fff !important;
     border-color: #d5d5d5 !important;
-    padding: 4px 36px 4px 40px;
+    padding: 4px 36px 4px 40px !important;
 }
 .btn-radio.active {
     color: #009444;
@@ -275,9 +276,9 @@ label.btn-radio {
 .fa {
     color: #4D4D4D;
 }
-.bg-green {
-    background-color: #009444;
-    color: #fff;
+.bg-hijau {
+    background-color: #009444 !important;
+    color: #fff !important;
 }
 .font-weight-medium {
     font-weight: 600;
@@ -346,4 +347,28 @@ label.btn-radio {
 .page-item.active .page-link {
     background-color: rgb(0, 148, 68) !important;
     border-color: rgb(0, 148, 68) !important;
+}
+.modal-title {
+    font-size: 20px;
+    font-weight: 700;
+}
+.modal-header.bg-hijau .close {
+    color: #fff !important;
+    opacity: 1;
+    font-weight: 400;
+}
+.modal-header, .modal-body, .modal-footer {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+}
+.input-group-addon {
+    padding: 6px 12px;
+    line-height: 1;
+    text-align: center;
+}
+.orange {
+    color: #F26327;
+}
+.green {
+    color: #009444;
 }
