--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,20 @@ label {
 .btn-third .fa {
     color: #fff;
 }
+.btn-fourth {
+    color: #A7A7A7 !important;
+    background-color: #fff!important;
+    border-color: #A7A7A7!important;
+    padding: 10px 36px;
+}
+.btn-fourth.active {
+    color: #009444 !important;
+    background-color: #D6F1E2!important;
+    border-color: #009444 !important;
+}
+.nav-tabs.btn-tab {
+    border: none;
+}
 label.btn-radio {
     border-radius: 24px !important;
 }
@@ -459,4 +473,22 @@ header {
 }
 .news .card-text {
     color: #9d9d9d;
+}
+.chart-grid .card-header, .chart-grid .card-body {
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+}
+.card.chart-grid, .card.chart-grid .card-header {
+    border-radius: 10px 10px 0px 0px !important;
+    box-shadow: none;
+}
+.card.chart-grid {
+    border: 1px solid #E6E6E6;
+}
+.card.chart-grid .card-body {
+    padding-bottom: 60px !important;
+}
+.chart-grid .card-header {
+    padding-top: 10px !important;
+    padding-bottom: 10px !important;
 }
