--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,12 +165,16 @@ label {
     border-bottom: 3px solid #009444 !important;
 }
 .nav-tabs .nav-item {
-    cursor: pointer;
     padding: 0;
 }
 .nav-tabs .nav-item a {
     padding-top: 15px;
     padding-bottom: 15px;
+    cursor: pointer;
+}
+.nav-tabs .nav-item .nav-link.disabled {
+    color: #9d9d9d !important;
+    cursor: default !important;
 }
 label.btn-radio {
     border-radius: 24px !important;
