--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,3 +521,23 @@ header {
     background-color: #fff !important;
     border-radius: 0 0 10px 10px !important;
 }
+.custom-file-label {
+    border: none !important;
+    padding: 0 !important;
+    display: flex !important;
+    align-items: center !important;
+    color: #9d9d9d !important;
+    font-weight: 400 !important;
+}
+.custom-file-input:lang(en)~.custom-file-label::after {
+    content: "Unggah" !important;
+    border-radius: 4px !important;
+    padding: 6px 15px !important;
+    background-color: #F26327 !important;
+    color: #fff !important;
+}
+.hint-text {
+    color: #9d9d9d;
+    font-size: 12px;
+    margin-top: 6px !important;
+}
