--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -665,3 +665,20 @@ input.form-control-plaintext, textarea.form-control-plaintext {
     width: 33px;
 }
 /* icons end here */
+
+.disable-longlat {
+    display: block;
+    width: 100%;
+    height: calc(2.25rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #e9ecef;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    box-shadow: inset 0 0 0 transparent;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
