--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -684,3 +684,12 @@ input.form-control-plaintext, textarea.form-control-plaintext {
     box-shadow: inset 0 0 0 transparent;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
+tr td {
+    border-right: 0 !important;
+}
+.table-bordered thead tr, .table-bordered  tr th {
+    border-color: rgb(68, 186, 123);
+}
+.top-5 table thead tr th {
+    border-top: none !important;
+}
