--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,6 +207,10 @@ label.btn-radio {
 .btn-radio.active:hover {
     color: #009444;
 }
+.btn-radio.active.disabled {
+    color: #9d9d9d;
+    border-color: #9d9d9d !important;
+}
 .checkmark2 {
     position: absolute;
     top: 7px;
@@ -218,6 +222,9 @@ label.btn-radio {
 }
 .btn-radio.active .checkmark2 {
     border-color: #009444;
+}
+.btn-radio.active.disabled .checkmark2 {
+    border-color: #9d9d9d;
 }
 .checkmark2:after {
     content: "";
@@ -233,6 +240,9 @@ label.btn-radio {
     background-color: #009444;
     border-radius: 10px;
     display: block;
+}
+.btn-radio.active.disabled .checkmark2::after {
+    background-color: #9d9d9d;
 }
 [class*="col-"] {
     float: left;
@@ -266,6 +276,10 @@ label.btn-radio {
 .checkwrap input:checked ~ .checkmark{
     background-color: #009444 !important;
     border: 1px solid #009444;
+}
+.checkwrap input:disabled:checked ~ .checkmark {
+    border: 1px solid #9d9d9d;
+    background-color: #9d9d9d !important;
 }
 .checkmark {
     position: absolute;
@@ -702,10 +716,11 @@ tr td {
     font-style: italic;
     /* margin-right: 40px; */
 }
-.custom-filter input[type="search"]:focus {
-    border: 1px solid #d1d1d1;
+.custom-filter input[type="search"]:focus, input[type="search"]:focus {
+    border: 1px solid #d1d1d1 !important;
     /* margin-right: 40px; */
 }
+input[type="search"]:
 /* .custom-filter .dataTables_filter label::after {
     content: "\f002";
     position: absolute;
