update custom filter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,14 @@ label {
     background-color: #D6F1E2!important;
     border-color: #009444 !important;
 }
+.btn-fifth {
+    padding: 10px 28px;
+    min-width: 66px;
+}
+.btn-fifth .fa {
+    color: #F26327;
+    font-size: 22px;
+}
 .nav-tabs.btn-tab {
     border: none;
 }
@@ -539,7 +547,7 @@ header {
     border-radius: 5px;
 }
 .input-search .btn {
-    width: 66px;
+    min-width: 66px;
 }
 .news .card-body {
     padding: 8px 0 !important;
@@ -732,3 +740,17 @@ tr td {
     border-radius: 0 0.2rem 0.2rem 0;
     background-color: #F26327;
 } */
+
+/* DataTable */
+.custom-filter div.dataTables_length label {
+    font-weight: normal !important;
+    text-align: left;
+    white-space: nowrap;
+}
+.custom-filter div.dataTables_length select {
+    width: auto;
+    display: inline-block;
+}
+.custom-filter div.dataTables_filter {
+    text-align: right;
+}
